ateneo-one-big-app/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoba-service
spec:
  selector:
    app: aoba
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
  type: ClusterIP
