ateneo-one-big-app/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aoba-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aoba.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aoba-service
            port:
              number: 80
